change: Use custom JVM args for development
This enables the Zero Garbage Collector (ZGC) and sets
a reasonable heap size by default. The behavior can be
turned off by setting the project property
'sodium.use_custom_jvm_args' to 'false'.